--- a/CodebenchDownloadExtenstion/popup.html
+++ b/CodebenchDownloadExtenstion/popup.html
@@ -33,6 +33,14 @@
             margin: 5px 0;
             cursor: pointer;
         }
+        .button-row {
+            display: flex;
+            gap: 5px;
+            margin: 5px 0;
+        }
+        .button-row button {
+            flex: 1;
+        }
         #status {
             margin-top: 10px;
             color: #666;
@@ -56,6 +64,16 @@
     <label for="avoidSmartScreen">Modify extensions to avoid SmartScreen block on Windows</label>
 </div>
 <button id="extractBtn">Extract Code Snippets</button>
+<div class="button-row">
+    <button id="copyFullTracePromptA">Full Trace Model A</button>
+    <button id="copyFullTracePromptB">Full Trace Model B</button>
+    <button id="copyFullTracePromptC">Full Trace Model C</button>
+</div>
+<div class="button-row">
+    <button id="copyShortenTracePromptA">Short Trace Model A</button>
+    <button id="copyShortenTracePromptB">Short Trace Model B</button>
+    <button id="copyShortenTracePromptC">Short Trace Model C</button>
+</div>
 <div id="status"></div>
 <script src="popup.js"></script>
 </body>
