update new way to generate justification

--- a/CodebenchDownloadExtenstion/popup.html
+++ b/CodebenchDownloadExtenstion/popup.html
@@ -64,11 +64,11 @@
     <label for="avoidSmartScreen">Modify extensions to avoid SmartScreen block on Windows</label>
 </div>
 <button id="extractBtn">Extract Code Snippets</button>
-<div class="button-row">
-    <button id="copyFullTracePromptA">Full Trace Model A</button>
-    <button id="copyFullTracePromptB">Full Trace Model B</button>
-    <button id="copyFullTracePromptC">Full Trace Model C</button>
-</div>
+<!--<div class="button-row">-->
+<!--    <button id="copyFullTracePromptA">Full Trace Model A</button>-->
+<!--    <button id="copyFullTracePromptB">Full Trace Model B</button>-->
+<!--    <button id="copyFullTracePromptC">Full Trace Model C</button>-->
+<!--</div>-->
 <div class="button-row">
     <button id="copyShortenTracePromptA">Short Trace Model A</button>
     <button id="copyShortenTracePromptB">Short Trace Model B</button>
