--- a/CodebenchDownloadExtenstion/popup.html
+++ b/CodebenchDownloadExtenstion/popup.html
@@ -74,6 +74,12 @@
     <button id="copyShortenTracePromptB">Short Trace Model B</button>
     <button id="copyShortenTracePromptC">Short Trace Model C</button>
 </div>
+
+<div class="button-row">
+    <button id="copyIncorrectAnswer">Copy Incorrect Answer</button>
+    <button id="copyCorrectAnswer">Copy Correct Answer</button>
+</div>
+
 <button id="copyPromptWithSample">Copy Prompt With Samples</button>
 <div id="status"></div>
 <script src="popup.js"></script>
